--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,176 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{loghmani2019recurrent,
+  title={Recurrent convolutional fusion for RGB-D object recognition},
+  author={Loghmani, Mohammad Reza and Planamente, Mirco and Caputo, Barbara and Vincze, Markus},
+  journal={IEEE Robotics and Automation Letters},
+  volume={4},
+  number={3},
+  pages={2878--2885},
+  year={2019},
+  publisher={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{planamente2018recurrent,
+  title={A recurrent multi-scale approach to RBG-D Object Recognition},
+  author={Planamente, Mirco and Loghmani, Mohammad Reza and Caputo, Barbara},
+  journal={arXiv preprint arXiv:1808.01357},
+  year={2018}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@article{loghmani2020unsupervised,
+  title={Unsupervised domain adaptation through inter-modal rotation for rgb-d object recognition},
+  author={Loghmani, Mohammad Reza and Robbiano, Luca and Planamente, Mirco and Park, Kiru and Caputo, Barbara and Vincze, Markus},
+  journal={IEEE Robotics and Automation Letters},
+  volume={5},
+  number={4},
+  pages={6631--6638},
+  year={2020},
+  publisher={IEEE}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{planamente2021da4event,
+  title={Da4event: towards bridging the sim-to-real gap for event cameras using domain adaptation},
+  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
+  journal={IEEE Robotics and Automation Letters},
+  volume={6},
+  number={4},
+  pages={6616--6623},
+  year={2021},
+  publisher={IEEE}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{planamente2021self,
+  title={Self-supervised joint encoding of motion and appearance for first person action recognition},
+  author={Planamente, Mirco and Bottino, Andrea and Caputo, Barbara},
+  booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
+  pages={8751--8758},
+  year={2021},
+  organization={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{plizzari2021polito,
+  title={Polito-iit submission to the epic-kitchens-100 unsupervised domain adaptation challenge for action recognition},
+  author={Plizzari, Chiara and Planamente, Mirco and Alberti, Emanuele and Caputo, Barbara},
+  journal={arXiv preprint arXiv:2107.00337},
+  year={2021}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{planamente2019leveraging,
+  title={Leveraging over depth in egocentric activity recognition},
+  author={Planamente, Mirco and Russo, Paolo and Caputo, Barbara},
+  booktitle={First Italian Conference on Robotics and Intelligent Machines},
+  year={2019}
+}
+
+@inproceedings{planamente2022domain,
+  title={Domain generalization through audio-visual relative norm alignment in first person action recognition},
+  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
+  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision},
+  pages={1807--1818},
+  year={2022}
+}
+
+@inproceedings{plizzari2022e2,
+  title={E2 (go) motion: Motion augmented event stream for egocentric action recognition},
+  author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={19935--19947},
+  year={2022}
+}
+
+@inproceedings{plananamente2022test,
+  title={Test-time adaptation for egocentric action recognition},
+  author={Plananamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
+  booktitle={International Conference on Image Analysis and Processing},
+  pages={206--218},
+  year={2022},
+  organization={Springer International Publishing Cham}
+}
+
+@article{plizzarie2,
+  title={E2 (GO) MOTION: Motion Augmented Event Stream for Egocentric Action Recognition Supplementary Material},
+  author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara}
+}
+
+@article{planamentedomain,
+  title={Domain Generalization through Audio-Visual Relative Norm Alignment in First Person Action Recognition Supplementary Material},
+  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara}
+}
+
+@article{planamente2022polito,
+  title={PoliTO-IIT-CINI Submission to the EPIC-KITCHENS-100 Unsupervised Domain Adaptation Challenge for Action Recognition},
+  author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
+  journal={arXiv preprint arXiv:2209.04525},
+  year={2022}
+}
+
+@article{goletto2023bringing,
+  title={Bringing Online Egocentric Action Recognition Into the Wild},
+  author={Goletto, Gabriele and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe},
+  journal={IEEE Robotics and Automation Letters},
+  volume={8},
+  number={4},
+  pages={2333--2340},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{planamente2022toward,
+  title={Toward human-robot cooperation: Unsupervised domain adaptation for egocentric action recognition},
+  author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
+  booktitle={International Workshop on Human-Friendly Robotics},
+  pages={218--232},
+  year={2022},
+  organization={Springer International Publishing Cham}
+}
+
+@inproceedings{neubert2023lcmv,
+  title={LCMV: Lightweight Classification Module for Video Domain Adaptation},
+  author={Neubert, Julian and Planamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
+  booktitle={International Conference on Image Analysis and Processing},
+  pages={270--282},
+  year={2023},
+  organization={Springer Nature Switzerland Cham}
+}
+
+@article{peirone2022test,
+  title={Test Time Adaptation for Egocentric Vision},
+  author={Peirone, SIMONE ALBERTO and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe and others},
+  year={2022}
+}
+
+@article{planamente2021da4event,
+  title={Da4event: towards bridging the sim-to-real gap for event cameras using domain adaptation},
+  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
+  journal={IEEE Robotics and Automation Letters},
+  volume={6},
+  number={4},
+  pages={6616--6623},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{planamente2021towards,
+  title={Towards bridging the Sim-to-Real Gap for Event Cameras using Domain Adaptation},
+  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara and others},
+  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{cannici2021n,
+  title={N-rod: A neuromorphic dataset for synthetic-to-real domain adaptation},
+  author={Cannici, Marco and Plizzari, Chiara and Planamente, Mirco and Ciccone, Marco and Bottino, Andrea and Caputo, Barbara and Matteucci, Matteo},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={1342--1347},
+  year={2021}
+}
+
+@article{planamente2023multi,
+  title={Multi-Modal Learning for Cross-Domain Analysis of Egocentric Action and Object Recognition},
+  author={Planamente, Mirco and others},
+  year={2023},
+  publisher={Politecnico di Torino}
 }
