--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,14 +57,14 @@
   year={2021}
 }
 
-@inproceedings{planamente2019leveraging,
+@article{planamente2019leveraging,
   title={Leveraging over depth in egocentric activity recognition},
   author={Planamente, Mirco and Russo, Paolo and Caputo, Barbara},
   booktitle={First Italian Conference on Robotics and Intelligent Machines},
   year={2019}
 }
 
-@inproceedings{planamente2022domain,
+@article{planamente2022domain,
   title={Domain generalization through audio-visual relative norm alignment in first person action recognition},
   author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
   booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision},
@@ -72,7 +72,7 @@
   year={2022}
 }
 
-@inproceedings{plizzari2022e2,
+@article{plizzari2022e2,
   title={E2 (go) motion: Motion augmented event stream for egocentric action recognition},
   author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara},
   booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
@@ -80,7 +80,7 @@
   year={2022}
 }
 
-@inproceedings{plananamente2022test,
+@article{plananamente2022test,
   title={Test-time adaptation for egocentric action recognition},
   author={Plananamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
   booktitle={International Conference on Image Analysis and Processing},
@@ -117,7 +117,7 @@
   publisher={IEEE}
 }
 
-@inproceedings{planamente2022toward,
+@article{planamente2022toward,
   title={Toward human-robot cooperation: Unsupervised domain adaptation for egocentric action recognition},
   author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
   booktitle={International Workshop on Human-Friendly Robotics},
@@ -126,7 +126,7 @@
   organization={Springer International Publishing Cham}
 }
 
-@inproceedings{neubert2023lcmv,
+@article{neubert2023lcmv,
   title={LCMV: Lightweight Classification Module for Video Domain Adaptation},
   author={Neubert, Julian and Planamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
   booktitle={International Conference on Image Analysis and Processing},
@@ -141,18 +141,7 @@
   year={2022}
 }
 
-@article{planamente2021da4event,
-  title={Da4event: towards bridging the sim-to-real gap for event cameras using domain adaptation},
-  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
-  journal={IEEE Robotics and Automation Letters},
-  volume={6},
-  number={4},
-  pages={6616--6623},
-  year={2021},
-  publisher={IEEE}
-}
-
-@inproceedings{planamente2021towards,
+@article{planamente2021towards,
   title={Towards bridging the Sim-to-Real Gap for Event Cameras using Domain Adaptation},
   author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara and others},
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems},
@@ -160,7 +149,7 @@
   organization={IEEE}
 }
 
-@inproceedings{cannici2021n,
+@article{cannici2021n,
   title={N-rod: A neuromorphic dataset for synthetic-to-real domain adaptation},
   author={Cannici, Marco and Plizzari, Chiara and Planamente, Mirco and Ciccone, Marco and Bottino, Andrea and Caputo, Barbara and Matteucci, Matteo},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
