--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,9 @@
----
----
-
 @article{loghmani2019recurrent,
   title={Recurrent convolutional fusion for RGB-D object recognition},
   author={Loghmani, Mohammad Reza and Planamente, Mirco and Caputo, Barbara and Vincze, Markus},
   journal={IEEE Robotics and Automation Letters},
   volume={4},
+  number={3},
   pages={2878--2885},
   year={2019},
   publisher={IEEE}
@@ -23,6 +21,7 @@
   author={Loghmani, Mohammad Reza and Robbiano, Luca and Planamente, Mirco and Park, Kiru and Caputo, Barbara and Vincze, Markus},
   journal={IEEE Robotics and Automation Letters},
   volume={5},
+  number={4},
   pages={6631--6638},
   year={2020},
   publisher={IEEE}
@@ -33,6 +32,7 @@
   author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
   journal={IEEE Robotics and Automation Letters},
   volume={6},
+  number={4},
   pages={6616--6623},
   year={2021},
   publisher={IEEE}
@@ -54,14 +54,14 @@
   year={2021}
 }
 
-@article{planamente2019leveraging,
+@inproceedings{planamente2019leveraging,
   title={Leveraging over depth in egocentric activity recognition},
   author={Planamente, Mirco and Russo, Paolo and Caputo, Barbara},
   booktitle={First Italian Conference on Robotics and Intelligent Machines},
   year={2019}
 }
 
-@article{planamente2022domain,
+@inproceedings{planamente2022domain,
   title={Domain generalization through audio-visual relative norm alignment in first person action recognition},
   author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
   booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision},
@@ -69,7 +69,7 @@
   year={2022}
 }
 
-@article{plizzari2022e2,
+@inproceedings{plizzari2022e2,
   title={E2 (go) motion: Motion augmented event stream for egocentric action recognition},
   author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara},
   booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
@@ -77,18 +77,13 @@
   year={2022}
 }
 
-@article{plananamente2022test,
+@inproceedings{plananamente2022test,
   title={Test-time adaptation for egocentric action recognition},
   author={Plananamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
   booktitle={International Conference on Image Analysis and Processing},
   pages={206--218},
   year={2022},
   organization={Springer International Publishing Cham}
-}
-
-@article{plizzarie2,
-  title={E2 (GO) MOTION: Motion Augmented Event Stream for Egocentric Action Recognition Supplementary Material},
-  author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara}
 }
 
 @article{planamentedomain,
@@ -108,12 +103,13 @@
   author={Goletto, Gabriele and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe},
   journal={IEEE Robotics and Automation Letters},
   volume={8},
+  number={4},
   pages={2333--2340},
   year={2023},
   publisher={IEEE}
 }
 
-@article{planamente2022toward,
+@inproceedings{planamente2022toward,
   title={Toward human-robot cooperation: Unsupervised domain adaptation for egocentric action recognition},
   author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
   booktitle={International Workshop on Human-Friendly Robotics},
@@ -122,7 +118,7 @@
   organization={Springer International Publishing Cham}
 }
 
-@article{neubert2023lcmv,
+@inproceedings{neubert2023lcmv,
   title={LCMV: Lightweight Classification Module for Video Domain Adaptation},
   author={Neubert, Julian and Planamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
   booktitle={International Conference on Image Analysis and Processing},
@@ -137,7 +133,8 @@
   year={2022}
 }
 
-@article{planamente2021towards,
+
+@inproceedings{planamente2021towards,
   title={Towards bridging the Sim-to-Real Gap for Event Cameras using Domain Adaptation},
   author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara and others},
   booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems},
@@ -145,7 +142,7 @@
   organization={IEEE}
 }
 
-@article{cannici2021n,
+@inproceedings{cannici2021n,
   title={N-rod: A neuromorphic dataset for synthetic-to-real domain adaptation},
   author={Cannici, Marco and Plizzari, Chiara and Planamente, Mirco and Ciccone, Marco and Bottino, Andrea and Caputo, Barbara and Matteucci, Matteo},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
