--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,3 +12,128 @@
   journal={arXiv preprint arXiv:1808.01357},
   year={2018}
 }
+
+@article{loghmani2020unsupervised,
+  title={Unsupervised domain adaptation through inter-modal rotation for rgb-d object recognition},
+  author={Loghmani, Mohammad Reza and Robbiano, Luca and Planamente, Mirco and Park, Kiru and Caputo, Barbara and Vincze, Markus},
+  journal={IEEE Robotics and Automation Letters},
+  year={2020},
+  publisher={IEEE}
+}
+
+
+@inproceedings{planamente2021self,
+  title={Self-supervised joint encoding of motion and appearance for first person action recognition},
+  author={Planamente, Mirco and Bottino, Andrea and Caputo, Barbara},
+  booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{plizzari2021polito,
+  title={Polito-iit submission to the epic-kitchens-100 unsupervised domain adaptation challenge for action recognition},
+  author={Plizzari, Chiara and Planamente, Mirco and Alberti, Emanuele and Caputo, Barbara},
+  journal={arXiv preprint arXiv:2107.00337},
+  year={2021}
+}
+
+@inproceedings{planamente2019leveraging,
+  title={Leveraging over depth in egocentric activity recognition},
+  author={Planamente, Mirco and Russo, Paolo and Caputo, Barbara},
+  booktitle={First Italian Conference on Robotics and Intelligent Machines},
+  year={2019}
+}
+
+@inproceedings{planamente2022domain,
+  title={Domain generalization through audio-visual relative norm alignment in first person action recognition},
+  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
+  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision},
+  year={2022}
+}
+
+@inproceedings{plizzari2022e2,
+  title={E2 (go) motion: Motion augmented event stream for egocentric action recognition},
+  author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  year={2022}
+}
+
+@inproceedings{plananamente2022test,
+  title={Test-time adaptation for egocentric action recognition},
+  author={Plananamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
+  booktitle={International Conference on Image Analysis and Processing},
+  year={2022},
+  organization={Springer International Publishing Cham}
+}
+
+@article{planamentedomain,
+  title={Domain Generalization through Audio-Visual Relative Norm Alignment in First Person Action Recognition Supplementary Material},
+  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara}
+}
+
+@article{planamente2022polito,
+  title={PoliTO-IIT-CINI Submission to the EPIC-KITCHENS-100 Unsupervised Domain Adaptation Challenge for Action Recognition},
+  author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
+  journal={arXiv preprint arXiv:2209.04525},
+  year={2022}
+}
+
+@article{goletto2023bringing,
+  title={Bringing Online Egocentric Action Recognition Into the Wild},
+  author={Goletto, Gabriele and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe},
+  journal={IEEE Robotics and Automation Letters},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{planamente2022toward,
+  title={Toward human-robot cooperation: Unsupervised domain adaptation for egocentric action recognition},
+  author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
+  booktitle={International Workshop on Human-Friendly Robotics},
+  year={2022},
+  organization={Springer International Publishing Cham}
+}
+
+@inproceedings{neubert2023lcmv,
+  title={LCMV: Lightweight Classification Module for Video Domain Adaptation},
+  author={Neubert, Julian and Planamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
+  booktitle={International Conference on Image Analysis and Processing},
+  year={2023},
+  organization={Springer Nature Switzerland Cham}
+}
+
+@article{peirone2022test,
+  title={Test Time Adaptation for Egocentric Vision},
+  author={Peirone, SIMONE ALBERTO and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe and others},
+  year={2022}
+}
+
+@article{planamente2021da4event,
+  title={Da4event: towards bridging the sim-to-real gap for event cameras using domain adaptation},
+  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
+  journal={IEEE Robotics and Automation Letters},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{planamente2021towards,
+  title={Towards bridging the Sim-to-Real Gap for Event Cameras using Domain Adaptation},
+  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara and others},
+  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{cannici2021n,
+  title={N-rod: A neuromorphic dataset for synthetic-to-real domain adaptation},
+  author={Cannici, Marco and Plizzari, Chiara and Planamente, Mirco and Ciccone, Marco and Bottino, Andrea and Caputo, Barbara and Matteucci, Matteo},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year={2021}
+}
+
+@article{planamente2023multi,
+  title={Multi-Modal Learning for Cross-Domain Analysis of Egocentric Action and Object Recognition},
+  author={Planamente, Mirco and others},
+  year={2023},
+  publisher={Politecnico di Torino}
+}
