--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -68,6 +68,7 @@
 @article{planamentedomain,
   title={Domain Generalization through Audio-Visual Relative Norm Alignment in First Person Action Recognition Supplementary Material},
   author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara}
+  year = {2022},
 }
 
 @article{planamente2022polito,
