--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -67,7 +67,7 @@
 
 @article{planamentedomain,
   title={Domain Generalization through Audio-Visual Relative Norm Alignment in First Person Action Recognition Supplementary Material},
-  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara}
+  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
   year = {2022},
 }
 
