--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,9 @@
   title={Recurrent convolutional fusion for RGB-D object recognition},
   author={Loghmani, Mohammad Reza and Planamente, Mirco and Caputo, Barbara and Vincze, Markus},
   journal={IEEE Robotics and Automation Letters},
+  volume={4},
+  number={3},
+  pages={2878--2885},
   year={2019},
   publisher={IEEE}
 }
@@ -17,7 +20,21 @@
   title={Unsupervised domain adaptation through inter-modal rotation for rgb-d object recognition},
   author={Loghmani, Mohammad Reza and Robbiano, Luca and Planamente, Mirco and Park, Kiru and Caputo, Barbara and Vincze, Markus},
   journal={IEEE Robotics and Automation Letters},
+  volume={5},
+  number={4},
+  pages={6631--6638},
   year={2020},
+  publisher={IEEE}
+}
+
+@article{planamente2021da4event,
+  title={Da4event: towards bridging the sim-to-real gap for event cameras using domain adaptation},
+  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
+  journal={IEEE Robotics and Automation Letters},
+  volume={6},
+  number={4},
+  pages={6616--6623},
+  year={2021},
   publisher={IEEE}
 }
 
@@ -25,6 +42,7 @@
   title={Self-supervised joint encoding of motion and appearance for first person action recognition},
   author={Planamente, Mirco and Bottino, Andrea and Caputo, Barbara},
   booktitle={2020 25th International Conference on Pattern Recognition (ICPR)},
+  pages={8751--8758},
   year={2021},
   organization={IEEE}
 }
@@ -46,7 +64,8 @@
 @inproceedings{planamente2022domain,
   title={Domain generalization through audio-visual relative norm alignment in first person action recognition},
   author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
-  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision},
+  booktitle={Proceedings of the IEEE/CVF winter conference on applications of computer vision},
+  pages={1807--1818},
   year={2022}
 }
 
@@ -54,6 +73,7 @@
   title={E2 (go) motion: Motion augmented event stream for egocentric action recognition},
   author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara},
   booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={19935--19947},
   year={2022}
 }
 
@@ -61,27 +81,30 @@
   title={Test-time adaptation for egocentric action recognition},
   author={Plananamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
   booktitle={International Conference on Image Analysis and Processing},
+  pages={206--218},
   year={2022},
   organization={Springer International Publishing Cham}
 }
 
-@article{planamentedomain,
-  title={Domain Generalization through Audio-Visual Relative Norm Alignment in First Person Action Recognition Supplementary Material},
-  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara},
-  year = {2022},
+@article{plizzarie2,
+  title={E2 (GO) MOTION: Motion Augmented Event Stream for Egocentric Action Recognition Supplementary Material},
+  author={Plizzari, Chiara and Planamente, Mirco and Goletto, Gabriele and Cannici, Marco and Gusso, Emanuele and Matteucci, Matteo and Caputo, Barbara}
 }
 
 @article{planamente2022polito,
-  title={PoliTO-IIT-CINI Submission to the EPIC-KITCHENS-100 Unsupervised Domain Adaptation Challenge for Action Recognition},
+  title={PoliTO-IIT-CINI submission to the EPIC-KITCHENS-100 unsupervised domain adaptation challenge for action recognition},
   author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
   journal={arXiv preprint arXiv:2209.04525},
   year={2022}
 }
 
 @article{goletto2023bringing,
-  title={Bringing Online Egocentric Action Recognition Into the Wild},
+  title={Bringing online egocentric action recognition into the wild},
   author={Goletto, Gabriele and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe},
   journal={IEEE Robotics and Automation Letters},
+  volume={8},
+  number={4},
+  pages={2333--2340},
   year={2023},
   publisher={IEEE}
 }
@@ -90,50 +113,87 @@
   title={Toward human-robot cooperation: Unsupervised domain adaptation for egocentric action recognition},
   author={Planamente, Mirco and Goletto, Gabriele and Trivigno, Gabriele and Averta, Giuseppe and Caputo, Barbara},
   booktitle={International Workshop on Human-Friendly Robotics},
+  pages={218--232},
   year={2022},
   organization={Springer International Publishing Cham}
 }
 
 @inproceedings{neubert2023lcmv,
-  title={LCMV: Lightweight Classification Module for Video Domain Adaptation},
+  title={LCMV: lightweight classification module for video domain adaptation},
   author={Neubert, Julian and Planamente, Mirco and Plizzari, Chiara and Caputo, Barbara},
   booktitle={International Conference on Image Analysis and Processing},
+  pages={270--282},
   year={2023},
   organization={Springer Nature Switzerland Cham}
 }
 
-@article{peirone2022test,
-  title={Test Time Adaptation for Egocentric Vision},
-  author={Peirone, SIMONE ALBERTO and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe and others},
-  year={2022}
-}
-
-@article{planamente2021da4event,
-  title={Da4event: towards bridging the sim-to-real gap for event cameras using domain adaptation},
-  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara},
-  journal={IEEE Robotics and Automation Letters},
-  year={2021},
-  publisher={IEEE}
-}
-
-@inproceedings{planamente2021towards,
-  title={Towards bridging the Sim-to-Real Gap for Event Cameras using Domain Adaptation},
-  author={Planamente, Mirco and Plizzari, Chiara and Cannici, Marco and Ciccone, Marco and Strada, Francesco and Bottino, Andrea and Matteucci, Matteo and Caputo, Barbara and others},
-  booktitle={IEEE/RSJ International Conference on Intelligent Robots and Systems},
-  year={2021},
-  organization={IEEE}
+@inproceedings{peirone2023test,
+  title={Test Time Adaptation for Egocentric Vision.},
+  author={Peirone, Simone Alberto and Planamente, Mirco and Caputo, Barbara and Averta, Giuseppe and others},
+  booktitle={Ital-IA},
+  pages={42--47},
+  year={2023}
 }
 
 @inproceedings{cannici2021n,
   title={N-rod: A neuromorphic dataset for synthetic-to-real domain adaptation},
   author={Cannici, Marco and Plizzari, Chiara and Planamente, Mirco and Ciccone, Marco and Bottino, Andrea and Caputo, Barbara and Matteucci, Matteo},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={1342--1347},
   year={2021}
 }
 
 @article{planamente2023multi,
   title={Multi-Modal Learning for Cross-Domain Analysis of Egocentric Action and Object Recognition},
-  author={Planamente, Mirco and others},
+  author={Planamente, Mirco},
   year={2023},
   publisher={Politecnico di Torino}
+}
+
+@article{planamente2024relative,
+  title={Relative norm alignment for tackling domain shift in deep multi-modal classification},
+  author={Planamente, Mirco and Plizzari, Chiara and Peirone, Simone Alberto and Caputo, Barbara and Bottino, Andrea},
+  journal={International Journal of Computer Vision},
+  volume={132},
+  number={7},
+  pages={2618--2638},
+  year={2024},
+  publisher={Springer US New York}
+}
+
+@inproceedings{loghmani2020unsupervised,
+  title={Unsupervised Domain Adaptation Through Inter-Modal Rotation for RGB-D Object Recognition},
+  author={Loghmani Mohammad, Reza and Robbiano, Luca and Planamente, Mirco and Park, Kiru and Caputo, Barbara and Vincze, Markus and others},
+  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and System (IROS)},
+  year={2020},
+  organization={IEEE Robotics and Automation Society}
+}
+
+@article{peirone2025egocentric,
+  title={Egocentric zone-aware action recognition across environments},
+  author={Peirone, Simone Alberto and Goletto, Gabriele and Planamente, Mirco and Bottino, Andrea and Caputo, Barbara and Averta, Giuseppe},
+  journal={Pattern Recognition Letters},
+  volume={188},
+  pages={140--147},
+  year={2025},
+  publisher={North-Holland}
+}
+
+@article{plizzariframework,
+  title={A Framework for Real-World Egocentric Action Recognition},
+  author={Plizzari, Chiara and Planamente, Mirco and Alberti, Emanuele and Caputo, Barbara}
+}
+
+@article{planamentedomain,
+  title={Domain Generalization through Audio-Visual Relative Norm Alignment in First Person Action Recognition Supplementary Material},
+  author={Planamente, Mirco and Plizzari, Chiara and Alberti, Emanuele and Caputo, Barbara}
+}
+
+@inproceedings{forni2025fs,
+  title={FS-SAM2: Adapting Segment Anything Model 2 for Few-Shot Semantic Segmentation via Low-Rank Adaptation},
+  author={Forni, Bernardo and Lombardi, Gabriele and Pozzi, Federico and Planamente, Mirco},
+  booktitle={International Conference on Image Analysis and Processing},
+  pages={67--78},
+  year={2025},
+  organization={Springer Nature Switzerland Cham}
 }
